--- a/notebooks/comfy/Test-RunpodWorkers.ipynb
+++ b/notebooks/comfy/Test-RunpodWorkers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "1a5b4bf6-c39f-4243-bd0e-24d597fc265b",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading workflow from 'LoadAudio-VibeVoiceSS-Maya=v2.json'...\n",
       "Sending request to start the job...\n",
-      "Job successfully started with ID: 460a8628-4f6d-4f04-a42f-c29b9d17c283-u2\n",
-      "Polling for job status...\n",
-      "Polling for job status...\n",
-      "Polling for job status...\n",
+      "Job successfully started with ID: 9003cd4a-2f9a-4bfb-99b7-35750fa3f160-u1\n",
       "Polling for job status...\n",
       "Polling for job status...\n",
       "Job completed successfully!\n",
-      "\n",
-      " Image successfully generated and saved as 'ComfyUI_FP8_Checkpoint_00006_.png'\n",
-      "\n"
+      "Processing audio output...\n",
+      "Audio successfully generated and saved as 'ComfyUI_00001_.flac'\n"
      ]
     }
    ],
@@ -31,34 +28,31 @@
     "import time\n",
     "from PIL import Image\n",
     "from io import BytesIO\n",
+    "import os\n",
     "from dotenv import load_dotenv \n",
-    "# --- 1. Configuration ---\n",
-    "load_dotenv()  # <-- Load variables from your .env file\n",
     "\n",
-    "# Read the API key from the environment; exit if not found\n",
+    "# --- 1. Configuration ---\n",
+    "load_dotenv()\n",
+    "\n",
     "api_key = os.getenv(\"RUNPOD_API_KEY\")\n",
     "if not api_key:\n",
     "    raise ValueError(\"API key not found. Please create a .env file and add RUNPOD_API_KEY=your_key\")\n",
     "\n",
-    "\n",
-    "endpoint_id = \"bsze1gjo0ob5lk\"\n",
+    "workflow_file_name = \"LoadAudio-VibeVoiceSS-Maya=v2.json\"\n",
+    "endpoint_id = \"sz4vfpd14gvjyo\"\n",
     "\n",
     "# --- 2. Define the API URLs ---\n",
     "run_url = f\"https://api.runpod.ai/v2/{endpoint_id}/run\"\n",
     "status_url_template = f\"https://api.runpod.ai/v2/{endpoint_id}/status/\"\n",
     "\n",
-    "# --- 3. Define the FLUX Workflow Payload ---\n",
-    "flux_workflow = {\n",
+    "# --- 3. Load the Workflow from the JSON File ---\n",
+    "print(f\"Loading workflow from '{workflow_file_name}'...\")\n",
+    "with open(workflow_file_name, 'r') as f:\n",
+    "    workflow_from_file = json.load(f)\n",
+    "\n",
+    "workflow = {\n",
     "    \"input\": {\n",
-    "        \"workflow\": {\n",
-    "            \"3\": {\"inputs\": {\"seed\": 1337, \"steps\": 28, \"cfg\": 1.0, \"sampler_name\": \"dpmpp_2m\", \"scheduler\": \"simple\", \"denoise\": 1.0, \"model\": [\"4\", 0], \"positive\": [\"6\", 0], \"negative\": [\"7\", 0], \"latent_image\": [\"5\", 0]}, \"class_type\": \"KSampler\"},\n",
-    "            \"4\": {\"inputs\": {\"ckpt_name\": \"flux1-dev-fp8.safetensors\"}, \"class_type\": \"CheckpointLoaderSimple\"},\n",
-    "            \"5\": {\"inputs\": {\"width\": 1024, \"height\": 1024, \"batch_size\": 1}, \"class_type\": \"EmptyLatentImage\"},\n",
-    "            \"6\": {\"inputs\": {\"text\": \"Vibrant and fun digital art illustration of the Golang mascot, a cute cartoon gopher. He is cheerfully wearing a white Hooters tank top and enthusiastically holding up a frosty, overflowing pitcher of beer. The style is a clean, smooth digital painting with bright colors and sharp focus, trending on ArtStation. The background is simple and uncluttered to keep the focus on the character\", \"clip\": [\"4\", 1]}, \"class_type\": \"CLIPTextEncode\"},\n",
-    "            \"7\": {\"inputs\": {\"text\": \"photograph, realistic, 3d render, blurry, ugly, deformed, disfigured, watermark, text, signature, bad anatomy, extra limbs, poorly drawn, dark, scary\", \"clip\": [\"4\", 1]}, \"class_type\": \"CLIPTextEncode\"},\n",
-    "            \"8\": {\"inputs\": {\"samples\": [\"3\", 0], \"vae\": [\"4\", 2]}, \"class_type\": \"VAEDecode\"},\n",
-    "            \"9\": {\"inputs\": {\"filename_prefix\": \"ComfyUI_FP8_Checkpoint\", \"images\": [\"8\", 0]}, \"class_type\": \"SaveImage\"}\n",
-    "        }\n",
+    "        \"workflow\": workflow_from_file\n",
     "    }\n",
     "}\n",
     "\n",
@@ -69,7 +63,7 @@
     "}\n",
     "\n",
     "print(\"Sending request to start the job...\")\n",
-    "response = requests.post(run_url, headers=headers, json=flux_workflow)\n",
+    "response = requests.post(run_url, headers=headers, json=workflow)\n",
     "\n",
     "if response.status_code == 200:\n",
     "    response_data = response.json()\n",
@@ -94,27 +88,58 @@
     "                \n",
     "                # --- 6. Process the Final Output ---\n",
     "                try:\n",
-    "                    output_image_data = status_data['output']['images'][0]\n",
-    "\n",
-    "                    image_base64 = output_image_data['data'] \n",
-    "                    filename = output_image_data['filename']\n",
-    "\n",
-    "                    image_bytes = base64.b64decode(image_base64)\n",
-    "                    image = Image.open(BytesIO(image_bytes))\n",
+    "                    output = status_data.get('output', {})\n",
     "                    \n",
-    "                    image.save(filename)\n",
-    "                    print(f\"\\n Image successfully generated and saved as '{filename}'\\n\")\n",
-    "\n",
-    "                except (KeyError, IndexError, TypeError) as e:\n",
-    "                    print(f\"\\n Error: Could not parse image data from the final response: {e}\\n\")\n",
+    "                    # Handle audio outputs\n",
+    "                    if 'audio' in output and output['audio']:\n",
+    "                        print(\"Processing audio output...\")\n",
+    "                        for audio_item in output['audio']:\n",
+    "                            audio_base64 = audio_item['data']\n",
+    "                            filename = audio_item['filename']\n",
+    "                            \n",
+    "                            # Decode and save the audio file\n",
+    "                            audio_bytes = base64.b64decode(audio_base64)\n",
+    "                            with open(filename, 'wb') as f:\n",
+    "                                f.write(audio_bytes)\n",
+    "                            \n",
+    "                            print(f\"Audio successfully generated and saved as '{filename}'\")\n",
     "                    \n",
+    "                    # Handle image outputs (for workflows that generate images)\n",
+    "                    elif 'images' in output and output['images']:\n",
+    "                        print(\"Processing image output...\")\n",
+    "                        for image_item in output['images']:\n",
+    "                            image_base64 = image_item['data'] \n",
+    "                            filename = image_item['filename']\n",
+    "                            \n",
+    "                            image_bytes = base64.b64decode(image_base64)\n",
+    "                            image = Image.open(BytesIO(image_bytes))\n",
+    "                            \n",
+    "                            image.save(filename)\n",
+    "                            print(f\"Image successfully generated and saved as '{filename}'\")\n",
+    "                    \n",
+    "                    else:\n",
+    "                        print(\"No recognized output format (images or audio) found in response\")\n",
+    "                        print(\"Available output keys:\", list(output.keys()))\n",
+    "\n",
+    "                except Exception as e:\n",
+    "                    print(f\"\\n Error: Could not parse output data from the final response: {e}\\n\")\n",
+    "                    \n",
+    "                    # Debug output with redacted base64 data\n",
     "                    debug_data = json.loads(json.dumps(status_data))\n",
     "                    try:\n",
-    "                        # Correctly look for the 'data' key to redact it\n",
-    "                        for img in debug_data['output']['images']:\n",
-    "                            if 'data' in img:\n",
-    "                                original_length = len(img['data'])\n",
-    "                                img['data'] = f\"<base64 data redacted, original length: {original_length}>\"\n",
+    "                        # Redact both image and audio data for debugging\n",
+    "                        if 'output' in debug_data:\n",
+    "                            if 'images' in debug_data['output']:\n",
+    "                                for img in debug_data['output']['images']:\n",
+    "                                    if 'data' in img:\n",
+    "                                        original_length = len(img['data'])\n",
+    "                                        img['data'] = f\"<base64 data redacted, original length: {original_length}>\"\n",
+    "                            \n",
+    "                            if 'audio' in debug_data['output']:\n",
+    "                                for audio in debug_data['output']['audio']:\n",
+    "                                    if 'data' in audio:\n",
+    "                                        original_length = len(audio['data'])\n",
+    "                                        audio['data'] = f\"<base64 data redacted, original length: {original_length}>\"\n",
     "                    except Exception:\n",
     "                        pass \n",
     "                        \n",
@@ -137,14 +162,6 @@
     "    print(f\"Error: Initial API request failed with status code {response.status_code}\")\n",
     "    print(\"Response:\", response.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "550aae1b-b6ef-4869-a8c9-dffc6f8c766c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
